--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,8 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-
-{% for post in site.portfolio reversed %}
+{% assign projects = site.portfolio | sort: 'project-order' | reverse %}
+{% for post in projects %}
   {% include archive-single.html %}
 {% endfor %}
 
